final commit before deployment

--- a/portal/index.html
+++ b/portal/index.html
@@ -52,7 +52,8 @@
                     id="audio-url"
                     name="audio-url"
                     placeholder="Enter a direct url of audio"
-                  />
+                    value="https://raw.githubusercontent.com/Asseel-Naji/stutter_AI/master/sample_amazon.wav"
+                  >
                 </div>
                 <div class="col-12 col-md-3">
                   <button
